--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,10 +9,14 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">GI Web App Automation</th></tr>
-<tr><td><a href="#t0">Polict Creation</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">9,926</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Polict Creation</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">74,472</td><td></td><td></td></tr>
+<tr class="stripe"><td><a href="#t1">Polict Creation check for duplicate policy number</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">79,253</td><td></td><td></td></tr>
+<tr><th>Total</th><th class="num">2</th><th class="num">0</th><th class="num">0</th><th class="num">0</th><th class="num">153,725</th><th colspan="2"></th></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">GI Web App Automation</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Polict Creation &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testDrivers.TestDriver</td><td><a href="#m0">tDriver</a></td><td rowspan="1">1637651382474</td><td rowspan="1">9902</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">GI Web App Automation</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Polict Creation &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testDrivers.TestDriver</td><td><a href="#m0">tDriver</a></td><td rowspan="1">1637862995359</td><td rowspan="1">74442</td></tr></tbody>
+<tbody id="t1"><tr><th colspan="4">Polict Creation check for duplicate policy number &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testDrivers.TestDriver</td><td><a href="#m1">tDriver</a></td><td rowspan="1">1637863069830</td><td rowspan="1">79251</td></tr></tbody>
 </table>
 <h2>Polict Creation</h2><h3 id="m0">testDrivers.TestDriver#tDriver</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr><tr class="param stripe"><td>newpol_001</td><td>PolicyConfig</td><td>NewPolicy</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Polict Creation check for duplicate policy number</h2><h3 id="m1">testDrivers.TestDriver#tDriver</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr><tr class="param stripe"><td>newpol_002</td><td>PolicyConfig</td><td>NewPolicy</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
