--- a/test-output/index.html
+++ b/test-output/index.html
@@ -56,7 +56,7 @@
                 </li>
                 <li>
                   <a href="#" panel-name="testlist-GI_Web_App_Automation" class="navigator-link ">
-                    <span class="test-stats">1 test</span>
+                    <span class="test-stats">2 tests</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">1 method,   1 passed</span>
+                    <span class="method-stats">2 methods,   2 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -105,6 +105,11 @@
                       <span>
                         <img src="passed.png" width="3%"/>
                         <a href="#" panel-name="suite-GI_Web_App_Automation" title="testDrivers.TestDriver" class="method navigator-link" hash-for-method="tDriver(newpol_001, PolicyConfig, NewPolicy)">tDriver(newpol_001, PolicyConfig, NewPolicy)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-GI_Web_App_Automation" title="testDrivers.TestDriver" class="method navigator-link" hash-for-method="tDriver(newpol_002, PolicyConfig, NewPolicy)">tDriver(newpol_002, PolicyConfig, NewPolicy)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-GI_Web_App_Automation -->
@@ -133,6 +138,14 @@
                   <span class="parameters">(newpol_001, PolicyConfig, NewPolicy)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="tDriver(newpol_002, PolicyConfig, NewPolicy)">
+                  </a> <!-- tDriver(newpol_002, PolicyConfig, NewPolicy) -->
+                  <span class="method-name">tDriver</span>
+                  <span class="parameters">(newpol_002, PolicyConfig, NewPolicy)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
           </div> <!-- suite-GI_Web_App_Automation-class-passed -->
         </div> <!-- panel GI_Web_App_Automation -->
@@ -153,6 +166,14 @@
       &lt;class name=&quot;testDrivers.TestDriver&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Polict Creation --&gt;
+  &lt;test thread-count=&quot;5&quot; name=&quot;Polict Creation check for duplicate policy number&quot;&gt;
+    &lt;parameter name=&quot;test-id&quot; value=&quot;newpol_002&quot;/&gt;
+    &lt;parameter name=&quot;test-config&quot; value=&quot;PolicyConfig&quot;/&gt;
+    &lt;parameter name=&quot;test-config-sheet&quot; value=&quot;NewPolicy&quot;/&gt;
+    &lt;classes&gt;
+      &lt;class name=&quot;testDrivers.TestDriver&quot;/&gt;
+    &lt;/classes&gt;
+  &lt;/test&gt; &lt;!-- Polict Creation check for duplicate policy number --&gt;
 &lt;/suite&gt; &lt;!-- GI Web App Automation --&gt;
             </pre>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -165,6 +186,9 @@
             <ul>
               <li>
                 <span class="test-name">Polict Creation (1 class)</span>
+              </li>
+              <li>
+                <span class="test-name">Polict Creation check for duplicate policy number (1 class)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -190,16 +214,20 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(1);
+data.addRows(2);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'tDriver')
 data.setCell(0, 2, 'testDrivers.TestDriver')
-data.setCell(0, 3, 9902);
+data.setCell(0, 3, 79251);
+data.setCell(1, 0, 1)
+data.setCell(1, 1, 'tDriver')
+data.setCell(1, 2, 'testDrivers.TestDriver')
+data.setCell(1, 3, 74442);
 window.suiteTableData['GI_Web_App_Automation']= { tableData: data, tableDiv: 'times-div-GI_Web_App_Automation'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 9 seconds</span>
+              <span class="suite-total-time">Total running time: 2 minutes</span>
               <div id="times-div-GI_Web_App_Automation">
               </div> <!-- times-div-GI_Web_App_Automation -->
             </div> <!-- times-div -->
@@ -232,11 +260,15 @@ return data;
               </div> <!-- configuration-suite before -->
               <div class="test-method">
                 <span class="method-name">tDriver(newpol_001, PolicyConfig, NewPolicy)</span>
-                <span class="method-start">152 ms</span>
+                <span class="method-start">187 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">tDriver(newpol_002, PolicyConfig, NewPolicy)</span>
+                <span class="method-start">74658 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-suite after">
                 <span class="method-name">endReport</span>
-                <span class="method-start">10082 ms</span>
+                <span class="method-start">153917 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
