--- a/test-output/index.html
+++ b/test-output/index.html
@@ -56,7 +56,7 @@
                 </li>
                 <li>
                   <a href="#" panel-name="testlist-GI_Web_App_Automation" class="navigator-link ">
-                    <span class="test-stats">2 tests</span>
+                    <span class="test-stats">3 tests</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">3 methods,   3 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -109,7 +109,12 @@
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-GI_Web_App_Automation" title="testDrivers.TestDriver" class="method navigator-link" hash-for-method="tDriver(newpol_002, PolicyConfig, NewPolicy)">tDriver(newpol_002, PolicyConfig, NewPolicy)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-GI_Web_App_Automation" title="testDrivers.TestDriver" class="method navigator-link" hash-for-method="tDriver(newInsDN_001, INSDNCNConfig, NewDNCN)">tDriver(newInsDN_001, INSDNCNConfig, NewDNCN)</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img src="passed.png" width="3%"/>
+                        <a href="#" panel-name="suite-GI_Web_App_Automation" title="testDrivers.TestDriver" class="method navigator-link" hash-for-method="tDriver(newInsOR_001, INSORConfig, NewOR)">tDriver(newInsOR_001, INSORConfig, NewOR)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-GI_Web_App_Automation -->
@@ -140,10 +145,18 @@
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="tDriver(newpol_002, PolicyConfig, NewPolicy)">
-                  </a> <!-- tDriver(newpol_002, PolicyConfig, NewPolicy) -->
+                  <a name="tDriver(newInsDN_001, INSDNCNConfig, NewDNCN)">
+                  </a> <!-- tDriver(newInsDN_001, INSDNCNConfig, NewDNCN) -->
                   <span class="method-name">tDriver</span>
-                  <span class="parameters">(newpol_002, PolicyConfig, NewPolicy)</span>
+                  <span class="parameters">(newInsDN_001, INSDNCNConfig, NewDNCN)</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="tDriver(newInsOR_001, INSORConfig, NewOR)">
+                  </a> <!-- tDriver(newInsOR_001, INSORConfig, NewOR) -->
+                  <span class="method-name">tDriver</span>
+                  <span class="parameters">(newInsOR_001, INSORConfig, NewOR)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -166,14 +179,22 @@
       &lt;class name=&quot;testDrivers.TestDriver&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Polict Creation --&gt;
-  &lt;test thread-count=&quot;5&quot; name=&quot;Polict Creation check for duplicate policy number&quot;&gt;
-    &lt;parameter name=&quot;test-id&quot; value=&quot;newpol_002&quot;/&gt;
-    &lt;parameter name=&quot;test-config&quot; value=&quot;PolicyConfig&quot;/&gt;
-    &lt;parameter name=&quot;test-config-sheet&quot; value=&quot;NewPolicy&quot;/&gt;
+  &lt;test thread-count=&quot;5&quot; name=&quot;Creating Debit note of Policy&quot;&gt;
+    &lt;parameter name=&quot;test-id&quot; value=&quot;newInsDN_001&quot;/&gt;
+    &lt;parameter name=&quot;test-config&quot; value=&quot;INSDNCNConfig&quot;/&gt;
+    &lt;parameter name=&quot;test-config-sheet&quot; value=&quot;NewDNCN&quot;/&gt;
     &lt;classes&gt;
       &lt;class name=&quot;testDrivers.TestDriver&quot;/&gt;
     &lt;/classes&gt;
-  &lt;/test&gt; &lt;!-- Polict Creation check for duplicate policy number --&gt;
+  &lt;/test&gt; &lt;!-- Creating Debit note of Policy --&gt;
+  &lt;test thread-count=&quot;5&quot; name=&quot;Creating OR&quot;&gt;
+    &lt;parameter name=&quot;test-id&quot; value=&quot;newInsOR_001&quot;/&gt;
+    &lt;parameter name=&quot;test-config&quot; value=&quot;INSORConfig&quot;/&gt;
+    &lt;parameter name=&quot;test-config-sheet&quot; value=&quot;NewOR&quot;/&gt;
+    &lt;classes&gt;
+      &lt;class name=&quot;testDrivers.TestDriver&quot;/&gt;
+    &lt;/classes&gt;
+  &lt;/test&gt; &lt;!-- Creating OR --&gt;
 &lt;/suite&gt; &lt;!-- GI Web App Automation --&gt;
             </pre>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -188,7 +209,10 @@
                 <span class="test-name">Polict Creation (1 class)</span>
               </li>
               <li>
-                <span class="test-name">Polict Creation check for duplicate policy number (1 class)</span>
+                <span class="test-name">Creating Debit note of Policy (1 class)</span>
+              </li>
+              <li>
+                <span class="test-name">Creating OR (1 class)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -214,20 +238,24 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(3);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'tDriver')
 data.setCell(0, 2, 'testDrivers.TestDriver')
-data.setCell(0, 3, 79251);
+data.setCell(0, 3, 95560);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'tDriver')
 data.setCell(1, 2, 'testDrivers.TestDriver')
-data.setCell(1, 3, 74442);
+data.setCell(1, 3, 91629);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'tDriver')
+data.setCell(2, 2, 'testDrivers.TestDriver')
+data.setCell(2, 3, 66650);
 window.suiteTableData['GI_Web_App_Automation']= { tableData: data, tableDiv: 'times-div-GI_Web_App_Automation'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 2 minutes</span>
+              <span class="suite-total-time">Total running time: 4 minutes</span>
               <div id="times-div-GI_Web_App_Automation">
               </div> <!-- times-div-GI_Web_App_Automation -->
             </div> <!-- times-div -->
@@ -260,15 +288,19 @@ return data;
               </div> <!-- configuration-suite before -->
               <div class="test-method">
                 <span class="method-name">tDriver(newpol_001, PolicyConfig, NewPolicy)</span>
-                <span class="method-start">187 ms</span>
+                <span class="method-start">154 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">tDriver(newpol_002, PolicyConfig, NewPolicy)</span>
-                <span class="method-start">74658 ms</span>
+                <span class="method-name">tDriver(newInsDN_001, INSDNCNConfig, NewDNCN)</span>
+                <span class="method-start">91811 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">tDriver(newInsOR_001, INSORConfig, NewOR)</span>
+                <span class="method-start">187379 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-suite after">
                 <span class="method-name">endReport</span>
-                <span class="method-start">153917 ms</span>
+                <span class="method-start">254035 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
