Payment to Insurer added

--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,17 +9,10 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">GI Web App Automation</th></tr>
-<tr><td><a href="#t0">Polict Creation</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">91,653</td><td></td><td></td></tr>
-<tr class="stripe"><td><a href="#t1">Creating Debit note of Policy</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">95,563</td><td></td><td></td></tr>
-<tr><td><a href="#t2">Creating OR</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">66,652</td><td></td><td></td></tr>
-<tr><th>Total</th><th class="num">3</th><th class="num">0</th><th class="num">0</th><th class="num">0</th><th class="num">253,868</th><th colspan="2"></th></tr>
+<tr><td><a href="#t0">Creating AP</a></td><td class="num">1</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">68,212</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">GI Web App Automation</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Polict Creation &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testDrivers.TestDriver</td><td><a href="#m0">tDriver</a></td><td rowspan="1">1640845348080</td><td rowspan="1">91629</td></tr></tbody>
-<tbody id="t1"><tr><th colspan="4">Creating Debit note of Policy &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testDrivers.TestDriver</td><td><a href="#m1">tDriver</a></td><td rowspan="1">1640845439737</td><td rowspan="1">95560</td></tr></tbody>
-<tbody id="t2"><tr><th colspan="4">Creating OR &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testDrivers.TestDriver</td><td><a href="#m2">tDriver</a></td><td rowspan="1">1640845535305</td><td rowspan="1">66650</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">GI Web App Automation</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Creating AP &#8212; passed</th></tr><tr class="passedeven"><td rowspan="1">testDrivers.TestDriver</td><td><a href="#m0">tDriver</a></td><td rowspan="1">1641813465156</td><td rowspan="1">68178</td></tr></tbody>
 </table>
-<h2>Polict Creation</h2><h3 id="m0">testDrivers.TestDriver#tDriver</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr><tr class="param stripe"><td>newpol_001</td><td>PolicyConfig</td><td>NewPolicy</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>Creating Debit note of Policy</h2><h3 id="m1">testDrivers.TestDriver#tDriver</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr><tr class="param stripe"><td>newInsDN_001</td><td>INSDNCNConfig</td><td>NewDNCN</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h2>Creating OR</h2><h3 id="m2">testDrivers.TestDriver#tDriver</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr><tr class="param stripe"><td>newInsOR_001</td><td>INSORConfig</td><td>NewOR</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Creating AP</h2><h3 id="m0">testDrivers.TestDriver#tDriver</h3><table class="result"><tr class="param"><th>Parameter #1</th><th>Parameter #2</th><th>Parameter #3</th></tr><tr class="param stripe"><td>npaypinsr_001</td><td>APPaytoInsrConfig</td><td>NewPay</td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
