--- a/test-output/index.html
+++ b/test-output/index.html
@@ -56,7 +56,7 @@
                 </li>
                 <li>
                   <a href="#" panel-name="testlist-GI_Web_App_Automation" class="navigator-link ">
-                    <span class="test-stats">3 tests</span>
+                    <span class="test-stats">1 test</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods,   3 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,17 +104,7 @@
                     <div class="method-list-content passed suite-GI_Web_App_Automation">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-GI_Web_App_Automation" title="testDrivers.TestDriver" class="method navigator-link" hash-for-method="tDriver(newpol_001, PolicyConfig, NewPolicy)">tDriver(newpol_001, PolicyConfig, NewPolicy)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-GI_Web_App_Automation" title="testDrivers.TestDriver" class="method navigator-link" hash-for-method="tDriver(newInsDN_001, INSDNCNConfig, NewDNCN)">tDriver(newInsDN_001, INSDNCNConfig, NewDNCN)</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-GI_Web_App_Automation" title="testDrivers.TestDriver" class="method navigator-link" hash-for-method="tDriver(newInsOR_001, INSORConfig, NewOR)">tDriver(newInsOR_001, INSORConfig, NewOR)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-GI_Web_App_Automation" title="testDrivers.TestDriver" class="method navigator-link" hash-for-method="tDriver(npaypinsr_001, APPaytoInsrConfig, NewPay)">tDriver(npaypinsr_001, APPaytoInsrConfig, NewPay)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-GI_Web_App_Automation -->
@@ -137,26 +127,10 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="tDriver(newpol_001, PolicyConfig, NewPolicy)">
-                  </a> <!-- tDriver(newpol_001, PolicyConfig, NewPolicy) -->
+                  <a name="tDriver(npaypinsr_001, APPaytoInsrConfig, NewPay)">
+                  </a> <!-- tDriver(npaypinsr_001, APPaytoInsrConfig, NewPay) -->
                   <span class="method-name">tDriver</span>
-                  <span class="parameters">(newpol_001, PolicyConfig, NewPolicy)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="tDriver(newInsDN_001, INSDNCNConfig, NewDNCN)">
-                  </a> <!-- tDriver(newInsDN_001, INSDNCNConfig, NewDNCN) -->
-                  <span class="method-name">tDriver</span>
-                  <span class="parameters">(newInsDN_001, INSDNCNConfig, NewDNCN)</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="tDriver(newInsOR_001, INSORConfig, NewOR)">
-                  </a> <!-- tDriver(newInsOR_001, INSORConfig, NewOR) -->
-                  <span class="method-name">tDriver</span>
-                  <span class="parameters">(newInsOR_001, INSORConfig, NewOR)</span>
+                  <span class="parameters">(npaypinsr_001, APPaytoInsrConfig, NewPay)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -171,30 +145,14 @@
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;https://testng.org/testng-1.0.dtd&quot;&gt;
 &lt;suite name=&quot;GI Web App Automation&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
-  &lt;test thread-count=&quot;5&quot; name=&quot;Polict Creation&quot;&gt;
-    &lt;parameter name=&quot;test-id&quot; value=&quot;newpol_001&quot;/&gt;
-    &lt;parameter name=&quot;test-config&quot; value=&quot;PolicyConfig&quot;/&gt;
-    &lt;parameter name=&quot;test-config-sheet&quot; value=&quot;NewPolicy&quot;/&gt;
+  &lt;test thread-count=&quot;5&quot; name=&quot;Creating AP&quot;&gt;
+    &lt;parameter name=&quot;test-id&quot; value=&quot;npaypinsr_001&quot;/&gt;
+    &lt;parameter name=&quot;test-config&quot; value=&quot;APPaytoInsrConfig&quot;/&gt;
+    &lt;parameter name=&quot;test-config-sheet&quot; value=&quot;NewPay&quot;/&gt;
     &lt;classes&gt;
       &lt;class name=&quot;testDrivers.TestDriver&quot;/&gt;
     &lt;/classes&gt;
-  &lt;/test&gt; &lt;!-- Polict Creation --&gt;
-  &lt;test thread-count=&quot;5&quot; name=&quot;Creating Debit note of Policy&quot;&gt;
-    &lt;parameter name=&quot;test-id&quot; value=&quot;newInsDN_001&quot;/&gt;
-    &lt;parameter name=&quot;test-config&quot; value=&quot;INSDNCNConfig&quot;/&gt;
-    &lt;parameter name=&quot;test-config-sheet&quot; value=&quot;NewDNCN&quot;/&gt;
-    &lt;classes&gt;
-      &lt;class name=&quot;testDrivers.TestDriver&quot;/&gt;
-    &lt;/classes&gt;
-  &lt;/test&gt; &lt;!-- Creating Debit note of Policy --&gt;
-  &lt;test thread-count=&quot;5&quot; name=&quot;Creating OR&quot;&gt;
-    &lt;parameter name=&quot;test-id&quot; value=&quot;newInsOR_001&quot;/&gt;
-    &lt;parameter name=&quot;test-config&quot; value=&quot;INSORConfig&quot;/&gt;
-    &lt;parameter name=&quot;test-config-sheet&quot; value=&quot;NewOR&quot;/&gt;
-    &lt;classes&gt;
-      &lt;class name=&quot;testDrivers.TestDriver&quot;/&gt;
-    &lt;/classes&gt;
-  &lt;/test&gt; &lt;!-- Creating OR --&gt;
+  &lt;/test&gt; &lt;!-- Creating AP --&gt;
 &lt;/suite&gt; &lt;!-- GI Web App Automation --&gt;
             </pre>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -206,13 +164,7 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">Polict Creation (1 class)</span>
-              </li>
-              <li>
-                <span class="test-name">Creating Debit note of Policy (1 class)</span>
-              </li>
-              <li>
-                <span class="test-name">Creating OR (1 class)</span>
+                <span class="test-name">Creating AP (1 class)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -238,24 +190,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(3);
+data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'tDriver')
 data.setCell(0, 2, 'testDrivers.TestDriver')
-data.setCell(0, 3, 95560);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'tDriver')
-data.setCell(1, 2, 'testDrivers.TestDriver')
-data.setCell(1, 3, 91629);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'tDriver')
-data.setCell(2, 2, 'testDrivers.TestDriver')
-data.setCell(2, 3, 66650);
+data.setCell(0, 3, 68178);
 window.suiteTableData['GI_Web_App_Automation']= { tableData: data, tableDiv: 'times-div-GI_Web_App_Automation'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 4 minutes</span>
+              <span class="suite-total-time">Total running time: 1 minutes</span>
               <div id="times-div-GI_Web_App_Automation">
               </div> <!-- times-div-GI_Web_App_Automation -->
             </div> <!-- times-div -->
@@ -287,20 +231,12 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-suite before -->
               <div class="test-method">
-                <span class="method-name">tDriver(newpol_001, PolicyConfig, NewPolicy)</span>
-                <span class="method-start">154 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">tDriver(newInsDN_001, INSDNCNConfig, NewDNCN)</span>
-                <span class="method-start">91811 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">tDriver(newInsOR_001, INSORConfig, NewOR)</span>
-                <span class="method-start">187379 ms</span>
+                <span class="method-name">tDriver(npaypinsr_001, APPaytoInsrConfig, NewPay)</span>
+                <span class="method-start">276 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-suite after">
                 <span class="method-name">endReport</span>
-                <span class="method-start">254035 ms</span>
+                <span class="method-start">68492 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
