--- a/test-output/old/GI Web App Automation/toc.html
+++ b/test-output/old/GI Web App Automation/toc.html
@@ -8,9 +8,9 @@
 <h3><p align="center">Results for<br/><em>GI Web App Automation</em></p></h3>
 <table border='1' width='100%'>
 <tr valign='top'>
-<td>3 tests</td>
+<td>1 test</td>
 <td><a target='mainFrame' href='classes.html'>1 class</a></td>
-<td>3 methods:<br/>
+<td>1 method:<br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods.html'>chronological</a><br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods-alphabetical.html'>alphabetical</a><br/>
 &nbsp;&nbsp;<a target='mainFrame' href='methods-not-run.html'>not run (0)</a></td>
@@ -22,24 +22,8 @@
 </tr></table>
 <table width='100%' class='test-passed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>Creating Debit note of Policy (1/0/0)</td><td valign='top' align='right'>
-  <a href='Creating Debit note of Policy.html' target='mainFrame'>Results</a>
-</td></tr></table>
-</td></tr><p/>
-</table>
-
-<table width='100%' class='test-passed'>
-<tr><td>
-<table style='width: 100%'><tr><td valign='top'>Creating OR (1/0/0)</td><td valign='top' align='right'>
-  <a href='Creating OR.html' target='mainFrame'>Results</a>
-</td></tr></table>
-</td></tr><p/>
-</table>
-
-<table width='100%' class='test-passed'>
-<tr><td>
-<table style='width: 100%'><tr><td valign='top'>Polict Creation (1/0/0)</td><td valign='top' align='right'>
-  <a href='Polict Creation.html' target='mainFrame'>Results</a>
+<table style='width: 100%'><tr><td valign='top'>Creating AP (1/0/0)</td><td valign='top' align='right'>
+  <a href='Creating AP.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
