Alert msg validation added and unwanted code removed

--- a/extentreports/Test_Result.html
+++ b/extentreports/Test_Result.html
@@ -40,7 +40,7 @@
 		<!-- nav-right -->
 		<ul id='nav-mobile' class='right hide-on-med-and-down nav-right'>
 			<a href='#!'>
-				<span class='label suite-start-time'>Jan 10, 2022, 4:47:44 PM</span>
+				<span class='label suite-start-time'>Jan 10, 2022, 7:38:48 PM</span>
 			</a>
 			<a href='#!'>
 				<span class='label'>v3.0.1</span>
@@ -147,15 +147,15 @@
 				
 				<li class='test displayed active  pass' status='pass' bdd='false' test-id='1'>
 					<div class='test-heading'>
-						<span class='test-name'>npaypinsr_001: Create New Payment to Insurer</span>
-						<span class='test-time'>Jan 10, 2022, 4:47:45 PM</span>
+						<span class='test-name'>newInsOR_001: Create New OR and knocked off invoice</span>
+						<span class='test-time'>Jan 10, 2022, 7:38:49 PM</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Jan 10, 2022, 4:47:45 PM</span>
-	<span class='label end-time'>Jan 10, 2022, 4:48:53 PM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 1m 7s+367ms</span>
+	<span class='label start-time'>Jan 10, 2022, 7:38:49 PM</span>
+	<span class='label end-time'>Jan 10, 2022, 7:39:53 PM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 1m 3s+836ms</span>
 </div>
 	<div class='test-steps'>
 		<table class='bordered table-results'>
@@ -169,53 +169,53 @@
 			<tbody>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>4:47:53 PM</td>
+					<td class='timestamp'>7:38:55 PM</td>
 					<td class='step-details'>User Name:admin@eta.com</td>
 				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>4:47:54 PM</td>
+					<td class='timestamp'>7:38:56 PM</td>
 					<td class='step-details'>Password: Success123</td>
 				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>4:48:21 PM</td>
-					<td class='step-details'>Insurer Selected</td>
+					<td class='timestamp'>7:39:21 PM</td>
+					<td class='step-details'>Customer name entered</td>
 				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>4:48:26 PM</td>
+					<td class='timestamp'>7:39:25 PM</td>
 					<td class='step-details'>Payment mode Selected</td>
 				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>4:48:32 PM</td>
+					<td class='timestamp'>7:39:30 PM</td>
 					<td class='step-details'>Bank Account code Selected</td>
 				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>4:48:36 PM</td>
+					<td class='timestamp'>7:39:34 PM</td>
 					<td class='step-details'>Amount paid entered</td>
 				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>4:48:42 PM</td>
+					<td class='timestamp'>7:39:40 PM</td>
 					<td class='step-details'>Auto Knockoff button clicked</td>
 				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>4:48:42 PM</td>
+					<td class='timestamp'>7:39:40 PM</td>
 					<td class='step-details'>Save Button Clicked</td>
 				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>4:48:52 PM</td>
+					<td class='timestamp'>7:39:51 PM</td>
 					<td class='step-details'>Official Receipt created</td>
 				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>4:48:53 PM</td>
-					<td class='step-details'>Test Completed Successfully - npaypinsr_001</td>
+					<td class='timestamp'>7:39:53 PM</td>
+					<td class='step-details'>Test Completed Successfully - newInsOR_001</td>
 				</tr>
 			</tbody>
 		</table>
@@ -266,19 +266,19 @@
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Start
-					<div class='panel-lead'>Jan 10, 2022, 4:47:44 PM</div>
+					<div class='panel-lead'>Jan 10, 2022, 7:38:48 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 			 		End
-			 		<div class='panel-lead'>Jan 10, 2022, 4:48:53 PM</div>
+			 		<div class='panel-lead'>Jan 10, 2022, 7:39:53 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Time Taken
-					<div class='panel-lead'>68,406ms</div>
+					<div class='panel-lead'>64,541ms</div>
 				</div>
 			</div>
 		</div>
