--- a/test-output/old/GI Web App Automation/toc.html
+++ b/test-output/old/GI Web App Automation/toc.html
@@ -22,8 +22,8 @@
 </tr></table>
 <table width='100%' class='test-passed'>
 <tr><td>
-<table style='width: 100%'><tr><td valign='top'>Creating AP (1/0/0)</td><td valign='top' align='right'>
-  <a href='Creating AP.html' target='mainFrame'>Results</a>
+<table style='width: 100%'><tr><td valign='top'>Creating OR (1/0/0)</td><td valign='top' align='right'>
+  <a href='Creating OR.html' target='mainFrame'>Results</a>
 </td></tr></table>
 </td></tr><p/>
 </table>
