Common function implemented for Log and Extent messages

--- a/test-output/index.html
+++ b/test-output/index.html
@@ -104,7 +104,7 @@
                     <div class="method-list-content passed suite-GI_Web_App_Automation">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-GI_Web_App_Automation" title="testDrivers.TestDriver" class="method navigator-link" hash-for-method="tDriver(newInsOR_001, INSORConfig, NewOR)">tDriver(newInsOR_001, INSORConfig, NewOR)</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-GI_Web_App_Automation" title="testDrivers.TestDriver" class="method navigator-link" hash-for-method="tDriver(newpol_001, PolicyConfig, NewPolicy)">tDriver(newpol_001, PolicyConfig, NewPolicy)</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-GI_Web_App_Automation -->
@@ -127,10 +127,10 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="tDriver(newInsOR_001, INSORConfig, NewOR)">
-                  </a> <!-- tDriver(newInsOR_001, INSORConfig, NewOR) -->
+                  <a name="tDriver(newpol_001, PolicyConfig, NewPolicy)">
+                  </a> <!-- tDriver(newpol_001, PolicyConfig, NewPolicy) -->
                   <span class="method-name">tDriver</span>
-                  <span class="parameters">(newInsOR_001, INSORConfig, NewOR)</span>
+                  <span class="parameters">(newpol_001, PolicyConfig, NewPolicy)</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -145,14 +145,14 @@
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;https://testng.org/testng-1.0.dtd&quot;&gt;
 &lt;suite name=&quot;GI Web App Automation&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
-  &lt;test thread-count=&quot;5&quot; name=&quot;Creating OR&quot;&gt;
-    &lt;parameter name=&quot;test-id&quot; value=&quot;newInsOR_001&quot;/&gt;
-    &lt;parameter name=&quot;test-config&quot; value=&quot;INSORConfig&quot;/&gt;
-    &lt;parameter name=&quot;test-config-sheet&quot; value=&quot;NewOR&quot;/&gt;
+  &lt;test thread-count=&quot;5&quot; name=&quot;Polict Creation&quot;&gt;
+    &lt;parameter name=&quot;test-id&quot; value=&quot;newpol_001&quot;/&gt;
+    &lt;parameter name=&quot;test-config&quot; value=&quot;PolicyConfig&quot;/&gt;
+    &lt;parameter name=&quot;test-config-sheet&quot; value=&quot;NewPolicy&quot;/&gt;
     &lt;classes&gt;
       &lt;class name=&quot;testDrivers.TestDriver&quot;/&gt;
     &lt;/classes&gt;
-  &lt;/test&gt; &lt;!-- Creating OR --&gt;
+  &lt;/test&gt; &lt;!-- Polict Creation --&gt;
 &lt;/suite&gt; &lt;!-- GI Web App Automation --&gt;
             </pre>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -164,7 +164,7 @@
           <div class="main-panel-content rounded-window-bottom">
             <ul>
               <li>
-                <span class="test-name">Creating OR (1 class)</span>
+                <span class="test-name">Polict Creation (1 class)</span>
               </li>
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
@@ -194,7 +194,7 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'tDriver')
 data.setCell(0, 2, 'testDrivers.TestDriver')
-data.setCell(0, 3, 64369);
+data.setCell(0, 3, 87196);
 window.suiteTableData['GI_Web_App_Automation']= { tableData: data, tableDiv: 'times-div-GI_Web_App_Automation'}
 return data;
 }
@@ -231,12 +231,12 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-suite before -->
               <div class="test-method">
-                <span class="method-name">tDriver(newInsOR_001, INSORConfig, NewOR)</span>
-                <span class="method-start">196 ms</span>
+                <span class="method-name">tDriver(newpol_001, PolicyConfig, NewPolicy)</span>
+                <span class="method-start">259 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-suite after">
                 <span class="method-name">endReport</span>
-                <span class="method-start">64594 ms</span>
+                <span class="method-start">87504 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
