--- a/extentreports/Test_Result.html
+++ b/extentreports/Test_Result.html
@@ -40,7 +40,7 @@
 		<!-- nav-right -->
 		<ul id='nav-mobile' class='right hide-on-med-and-down nav-right'>
 			<a href='#!'>
-				<span class='label suite-start-time'>Jan 10, 2022, 7:38:48 PM</span>
+				<span class='label suite-start-time'>Jan 11, 2022, 3:06:36 PM</span>
 			</a>
 			<a href='#!'>
 				<span class='label'>v3.0.1</span>
@@ -127,7 +127,7 @@
 					<canvas id='child-analysis' width='100' height='80'></canvas>
 				</div>
 				<div class='block text-small'>
-					<span><span class='strong'>10</span> step(s) passed</span>
+					<span><span class='strong'>19</span> step(s) passed</span>
 				</div>
 				<div class='block text-small'>
 					<span class='strong'>0</span> step(s) failed, <span class='strong'>0</span> others
@@ -147,15 +147,15 @@
 				
 				<li class='test displayed active  pass' status='pass' bdd='false' test-id='1'>
 					<div class='test-heading'>
-						<span class='test-name'>newInsOR_001: Create New OR and knocked off invoice</span>
-						<span class='test-time'>Jan 10, 2022, 7:38:49 PM</span>
+						<span class='test-name'>newpol_001: Create New General Policy</span>
+						<span class='test-time'>Jan 11, 2022, 3:06:37 PM</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Jan 10, 2022, 7:38:49 PM</span>
-	<span class='label end-time'>Jan 10, 2022, 7:39:53 PM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 1m 3s+836ms</span>
+	<span class='label start-time'>Jan 11, 2022, 3:06:37 PM</span>
+	<span class='label end-time'>Jan 11, 2022, 3:08:03 PM</span>
+	<span class='label time-taken grey lighten-1 white-text'>0h 1m 26s+490ms</span>
 </div>
 	<div class='test-steps'>
 		<table class='bordered table-results'>
@@ -169,53 +169,98 @@
 			<tbody>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>7:38:55 PM</td>
+					<td class='timestamp'>3:06:46 PM</td>
 					<td class='step-details'>User Name:admin@eta.com</td>
 				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>7:38:56 PM</td>
+					<td class='timestamp'>3:06:47 PM</td>
 					<td class='step-details'>Password: Success123</td>
 				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>7:39:21 PM</td>
-					<td class='step-details'>Customer name entered</td>
+					<td class='timestamp'>3:06:51 PM</td>
+					<td class='step-details'>Login Successfully, welcome to dashboard</td>
 				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>7:39:25 PM</td>
-					<td class='step-details'>Payment mode Selected</td>
+					<td class='timestamp'>3:06:56 PM</td>
+					<td class='step-details'>Sidebar menu clicked</td>
 				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>7:39:30 PM</td>
-					<td class='step-details'>Bank Account code Selected</td>
+					<td class='timestamp'>3:07:03 PM</td>
+					<td class='step-details'>Sidebar Insurance menu clicked</td>
 				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>7:39:34 PM</td>
-					<td class='step-details'>Amount paid entered</td>
+					<td class='timestamp'>3:07:05 PM</td>
+					<td class='step-details'>Sidebar Policy profile menu clicked</td>
 				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>7:39:40 PM</td>
-					<td class='step-details'>Auto Knockoff button clicked</td>
+					<td class='timestamp'>3:07:13 PM</td>
+					<td class='step-details'>Policy number entered</td>
 				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>7:39:40 PM</td>
-					<td class='step-details'>Save Button Clicked</td>
+					<td class='timestamp'>3:07:19 PM</td>
+					<td class='step-details'>Insured details entered</td>
 				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>7:39:51 PM</td>
-					<td class='step-details'>Official Receipt created</td>
+					<td class='timestamp'>3:07:25 PM</td>
+					<td class='step-details'>Bill to details entered</td>
 				</tr>
 				<tr class='log' status='pass'>
 					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
-					<td class='timestamp'>7:39:53 PM</td>
-					<td class='step-details'>Test Completed Successfully - newInsOR_001</td>
+					<td class='timestamp'>3:07:29 PM</td>
+					<td class='step-details'>Insurer details entered</td>
+				</tr>
+				<tr class='log' status='pass'>
+					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
+					<td class='timestamp'>3:07:36 PM</td>
+					<td class='step-details'>Class Selected</td>
+				</tr>
+				<tr class='log' status='pass'>
+					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
+					<td class='timestamp'>3:07:38 PM</td>
+					<td class='step-details'>Gross premium entered</td>
+				</tr>
+				<tr class='log' status='pass'>
+					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
+					<td class='timestamp'>3:07:41 PM</td>
+					<td class='step-details'></td>
+				</tr>
+				<tr class='log' status='pass'>
+					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
+					<td class='timestamp'>3:07:43 PM</td>
+					<td class='step-details'>Discont entered</td>
+				</tr>
+				<tr class='log' status='pass'>
+					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
+					<td class='timestamp'>3:07:46 PM</td>
+					<td class='step-details'>Our Commission 1 entered</td>
+				</tr>
+				<tr class='log' status='pass'>
+					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
+					<td class='timestamp'>3:07:48 PM</td>
+					<td class='step-details'>Save btton Clicked</td>
+				</tr>
+				<tr class='log' status='pass'>
+					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
+					<td class='timestamp'>3:07:57 PM</td>
+					<td class='step-details'>Ok btton Clicked</td>
+				</tr>
+				<tr class='log' status='pass'>
+					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
+					<td class='timestamp'>3:08:02 PM</td>
+					<td class='step-details'>Policy Created Successfully</td>
+				</tr>
+				<tr class='log' status='pass'>
+					<td class='status pass' title='pass' alt='pass'><i class='material-icons'>check_circle</i></td>
+					<td class='timestamp'>3:08:03 PM</td>
+					<td class='step-details'>Test Completed Successfully - newpol_001</td>
 				</tr>
 			</tbody>
 		</table>
@@ -260,25 +305,25 @@
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Steps
-					<div class='panel-lead'>10</div>
+					<div class='panel-lead'>19</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Start
-					<div class='panel-lead'>Jan 10, 2022, 7:38:48 PM</div>
+					<div class='panel-lead'>Jan 11, 2022, 3:06:36 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 			 		End
-			 		<div class='panel-lead'>Jan 10, 2022, 7:39:53 PM</div>
+			 		<div class='panel-lead'>Jan 11, 2022, 3:08:03 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Time Taken
-					<div class='panel-lead'>64,541ms</div>
+					<div class='panel-lead'>87,413ms</div>
 				</div>
 			</div>
 		</div>
@@ -298,7 +343,7 @@
 				skipParent: 0,
 				exceptionsParent: 0,
 				
-				passChild: 10,
+				passChild: 19,
 				failChild: 0,
 				fatalChild: 0,
 				errorChild: 0,
